--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
         "drupal/field_validation": "^1.0@beta",
         "drupal/filehash": "^1.5",
         "drupal/geolocation": "^3.7",
-        "drupal/image_effects": "3.x-dev@dev",
+        "drupal/image_effects": "^3.x-dev@dev",
         "drupal/jquery_ui_accordion": "^1.1",
         "drupal/jsonapi_extras": "^3.19",
         "drupal/key_auth": "^1.1",
@@ -77,7 +77,11 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {
+            "php": "7.4.0",
+            "ext-gd": "1"
+        }
     },
     "extra": {
         "drupal-scaffold": {
