Added Bootstrap 5 theme

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "drupal/backup_migrate": "^5.0",
         "drupal/better_exposed_filters": "^5.0@beta",
         "drupal/bootstrap": "^3.23",
+        "drupal/bootstrap5": "^1.1",
         "drupal/colorbox": "^1.7",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
@@ -39,6 +40,7 @@
         "drupal/facets": "^1.8",
         "drupal/facets_pretty_paths": "^1.1",
         "drupal/fft": "^2.3",
+        "drupal/field_formatter_class": "^1.5",
         "drupal/field_group": "^3.2",
         "drupal/field_validation": "^1.0@beta",
         "drupal/filefield_paths": "^1.0@beta",
