--- a/composer.json
+++ b/composer.json
@@ -25,41 +25,47 @@
         "drupal/auto_entitylabel": "^3.0@beta",
         "drupal/backup_migrate": "^5.0",
         "drupal/better_exposed_filters": "^5.0@beta",
-        "drupal/bootstrap": "^3.23",
         "drupal/bootstrap5": "^1.1",
+        "drupal/captcha": "^1.2",
         "drupal/colorbox": "^1.7",
+        "drupal/content_access": "^1.0@alpha",
         "drupal/core-composer-scaffold": "^9.2",
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
         "drupal/date_popup": "^1.1",
-        "drupal/devel": "^4.1",
         "drupal/dropzonejs": "^2.5",
         "drupal/ds": "^3.13",
+        "drupal/editablefields": "^1.0@beta",
         "drupal/empty_fields": "^1.0@beta",
+        "drupal/entity_reference_facet_link": "2.x-dev@dev",
+        "drupal/entity_reference_revisions": "^1.9",
         "drupal/entity_usage": "^2.0@beta",
-        "drupal/facets": "^1.8",
-        "drupal/facets_pretty_paths": "^1.1",
-        "drupal/fft": "^2.3",
+        "drupal/facets": "^2.0",
+        "drupal/facets_pretty_paths": "^1.2",
+        "drupal/field_defaults": "^1.3",
         "drupal/field_formatter_class": "^1.5",
         "drupal/field_group": "^3.2",
         "drupal/field_validation": "^1.0@beta",
-        "drupal/filefield_paths": "^1.0@beta",
+        "drupal/formatter_suite": "^1.3",
         "drupal/image_effects": "^3.x-dev@dev",
         "drupal/jquery_ui_accordion": "^1.1",
         "drupal/jsonapi_extras": "^3.19",
         "drupal/key_auth": "^1.1",
         "drupal/media_bulk_upload": "^1.0@alpha",
         "drupal/media_duplicates": "^1.2",
-        "drupal/paragraphs": "^1.12",
+        "drupal/menu_per_role": "^1.3",
+        "drupal/minifyhtml": "^1.10",
+        "drupal/minifyjs": "^2.2",
         "drupal/redis": "^1.5",
         "drupal/search_api": "^1.20",
         "drupal/select2": "^1.13",
         "drupal/semanticviews": "^2.3",
+        "drupal/taxonomy_unique": "^2.3",
+        "drupal/textimage": "^4.1",
         "drupal/token": "^1.9",
-        "drupal/unused_modules": "^1.3",
+        "drupal/twig_field_value": "^2.0",
         "drupal/views_bootstrap": "^4.3",
         "drupal/views_bulk_edit": "^2.6",
-        "drupal/views_bulk_operations": "^4.0",
         "drupal/views_entity_form_field": "^1.0@beta",
         "drupal/views_infinite_scroll": "^1.8",
         "drush/drush": "^10.6",
@@ -148,6 +154,10 @@
         "patches": {
             "drupal/select2": {
                 "Changed tokenSeparator in Select2 module": "patches/Changed_tokenSeparator_in_Select2_module.patch"
+            },
+            "drupal/entity_reference_facet_link": {
+                "Fix: Only facets with the same name as the field are shown": "https://www.drupal.org/files/issues/2018-04-24/facets_with_same_name-2964898-2.patch",
+                "Fix: Support facets based on related fields": "https://www.drupal.org/files/issues/2018-04-19/2962509_support_related_fields_facets_02.patch"
             }
         }
     }
