--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "drupal/core-project-message": "^9.2",
         "drupal/core-recommended": "^9.2",
         "drupal/date_popup": "^1.1",
+        "drupal/devel_entity_updates": "^3.0",
         "drupal/dropzonejs": "^2.5",
         "drupal/ds": "^3.13",
         "drupal/editablefields": "^1.0@beta",
@@ -46,6 +47,7 @@
         "drupal/field_formatter_class": "^1.5",
         "drupal/field_group": "^3.2",
         "drupal/field_validation": "^1.0@beta",
+        "drupal/file_mdm": "^2.2",
         "drupal/formatter_suite": "^1.3",
         "drupal/image_effects": "^3.x-dev@dev",
         "drupal/jquery_ui_accordion": "^1.1",
